Adding in jacoco test coverage.